--- a/src/components/Head/Head.astro
+++ b/src/components/Head/Head.astro
@@ -53,7 +53,7 @@ const ArticleData = {
 import "@/styles/Base.less";
 ---
 
-// 123
+// 在网站底部插入以下代码即可集成网站分析仪表板
 <script
 	defer
 	src="https://16e22ba3.cloudflare-831.pages.dev/tracker.min.js"
