--- a/src/layouts/Layout/Layout.astro
+++ b/src/layouts/Layout/Layout.astro
@@ -82,6 +82,6 @@ import "./Layout.less";
 		<script
 			defer
 			src="https://c419643d.cloudflare-831.pages.dev/tracker.min.js"
-			data-website-id="自定义网站唯一标识"></script>
+			data-website-id="blog"></script>
 	</body>
 </html>
