--- a/src/layouts/Layout/Layout.astro
+++ b/src/layouts/Layout/Layout.astro
@@ -78,5 +78,12 @@ import "./Layout.less";
 			// 全局初始化
 			InitFn();
 		</script>
+		<!-- Cloudflare Web Analytics -->
+		<script
+			defer
+			src="https://static.cloudflareinsights.com/beacon.min.js"
+			data-cf-beacon='{"token": "bd32ad5b19984e94b20e1ad15b1f8a88"}'
+		></script>
+		<!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
