--- a/src/components/Reward/Reward.astro
+++ b/src/components/Reward/Reward.astro
@@ -6,7 +6,7 @@ import "./Reward.less";
 {
 	SITE_INFO.Reward.douyin && SITE_INFO.Reward.WeChat && (
 		<section class="vh-reward">
-			<p>希望对你有帮助，深夜寂寞的话可以加我</p>
+			<p>夜深寂寞可以加我</p>
 			<div class="reward-list">
 				{SITE_INFO.Reward.douyin && (
 					<span class="douyin">
