--- a/src/layouts/Layout/Layout.astro
+++ b/src/layouts/Layout/Layout.astro
@@ -25,6 +25,8 @@ import "@/styles/Reset.less";
 import "@/styles/Base.less";
 // Layout 样式
 import "./Layout.less";
+// Vercel Speed Insights
+import SpeedInsights from "@vercel/speed-insights/astro";
 ---
 
 <html lang="zh-CN">
