--- a/src/components/Copyright/Copyright.astro
+++ b/src/components/Copyright/Copyright.astro
@@ -7,7 +7,7 @@ import "./Copyright.less";
 <section class="vh-copyright">
 	<p>本文由 <span>{auther}</span> 于 {time} 发布</p>
 	<p>本文链接：<a href={articleURL}>{title}</a></p>
-	<p>如有建议或疑问：<span>不接受、不认可，忍着吧。</span></p>
+	<p>如有建议或疑问：<span>不接受、不认可，憋着吧。</span></p>
 	<p>
 		本博客所有文章除特别声明外，均采用 <a
 			href="https://creativecommons.org/licenses/by-nc-sa/4.0"
