--- a/src/layouts/Layout/Layout.astro
+++ b/src/layouts/Layout/Layout.astro
@@ -74,5 +74,9 @@ import "./Layout.less";
 			data-cf-beacon='{"token": "bd32ad5b19984e94b20e1ad15b1f8a88"}'
 		></script>
 		<!-- End Cloudflare Web Analytics -->
+		<script
+			defer
+			src="https://c345be38.pages.dev/tracker.min.js"
+			data-website-id="自定义网站唯一标识"></script>
 	</body>
 </html>
