--- a/src/layouts/Layout/Layout.astro
+++ b/src/layouts/Layout/Layout.astro
@@ -76,7 +76,7 @@ import "./Layout.less";
 		<!-- End Cloudflare Web Analytics -->
 		<script
 			defer
-			src="https://c345be38.pages.dev/tracker.min.js"
-			data-website-id="自定义网站唯一标识"></script>
+			src="https://hananalytics-ahx.pages.dev/tracker.min.js"
+			data-website-id="Blog"></script>
 	</body>
 </html>
