--- a/src/components/Head/Head.astro
+++ b/src/components/Head/Head.astro
@@ -114,6 +114,6 @@ import "@/styles/Base.less";
 	{DNSOptimization.map((url: string) => <link rel="preconnect" href={url} />)}
 	<!-- LINK 标签 -->
 	<link rel="canonical" href={canonicalURL} />
-	<link rel="icon" type="image/x-icon" href="/logo.webp" />
+	<link rel="icon" type="image/x-icon" href="/assets/images/logo.webp" />
 	<slot />
 </head>
